# py-configmodel

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  requirements.txt
src/configmodel/: ConfigModel.py  Decorators.py  FieldBase.py  Fields.py  GlobalConfigManager.py  Logger.py  MixinCachedValues.py  MixinDelayedWrite.py  SerializerBase.py  SerializerIni.py  SerializersFactory.py  Utils.py  __init__.py
tests/: conftest.py  mock_Serializer.py  test_ConfigModel.py  test_InterruptibleTimer.py  test_Logger.py  test_MixinCachedValues.py  test_MixinDelayedWrite.py  test_SerializerIni.py  test_SerializersFactory.py
