# ==============================
# Tool configuration
# ==============================

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.semantic_release]
version_variables = ["setup.py:__version__"]
commit_parser = "angular"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
